# python_tg_order

./: .env  .gitmodules  Dockerfile  Taskfile.yaml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/botkit/: order_router.py  user_router.py
app/excel/: createExcel.py
app/mahakala_proto/: Readme.md  Taskfile.yaml  pyproject.toml
app/mahakala_proto/proto/order/: order.proto
excel_files/: users.xlsx
