[project]
name = "app"
version = "0.1.0"
description = "grpc python"
authors = [
    {name = "Sanchir",email = "115372855+Sanchir01@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "grpcio (>=1.70.0,<2.0.0)",
    "grpcio-tools (>=1.70.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

