[project]
name = "mahakala-proto"
version = "0.1.0"
description = "mahakala"
authors = [
    {name = "Sanchir01",email = "emgushovs@mail.ru"}
]
readme = "Readme.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio-tools (>=1.70.0,<2.0.0)",
    "grpcio (>=1.70.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
